# testing

./: .pre-commit-config.yaml  Cargo.toml
src/: main.rs
tests/: test_main.rs
