[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "testing"
path = "src/main.rs"  # Change this to "src/main.rs" if you are using main.rs

[dependencies]
cargo-llvm-cov = "0.6.4"
